# math-animate

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.ec2.yml  docker-compose.frontend.yml  docker-compose.vps.yml  docker-compose.yml  main.py  pyproject.toml
ai_workflow_lab/: .env.example  .gitignore  CONCLUSIONS.md  README.md  WORKFLOW.md  lab_logging.py  llm_client.py  pyproject.toml  render_smoke.py  run_experiment.py  schemas.py  settings.py  verify_render.py  workflow.py  workflow_state.py
ai_workflow_lab/inputs/: absolute_value_domain_interval_request.txt  function_translation_request.txt  linear_transformation_eigenvectors_request.txt  pythagoras_request.txt  signed_area_velocity_request.txt
ai_workflow_lab/llm_knowledge/: README.md  categories.py  document_models.py  skill_documents.py
ai_workflow_lab/llm_knowledge/manim_skill/: SKILL.md  visual_kit.py
ai_workflow_lab/llm_knowledge/manim_skill/examples/: derivatives_from_limits.py  external_circle_tangent_construction.py  pythagorean_theorem_proof.py
ai_workflow_lab/llm_knowledge/manim_skill/rules/: animation-patterns.md  educational-storyboarding.md  equation-transitions.md  layout-composition.md  lines-arrows-and-labels.md  math-visual-clarity.md  mobject-layout-basics.md  visual-kit-api.md  visual-styling.md
ai_workflow_lab/llm_knowledge/manim_skill/templates/: equation_template.py  fraction_model_template.py  function_graph_template.py  function_translation_template.py  matrix_template.py  pythagorean_area_template.py  right_triangle_diagram_template.py  squares_on_triangle_sides_template.py  triangle_comparison_template.py  triangle_template.py  unit_circle_template.py  vector_template.py
ai_workflow_lab/llm_knowledge/prompts/: CODEGEN_FIX_SYSTEM_PROMPT.md  CODEGEN_SYSTEM_PROMPT.md  CODE_PLAN_SYSTEM_PROMPT.md  CODE_QA_SYSTEM_PROMPT.md  PLAN_SYSTEM_PROMPT.md
ai_workflow_lab/nodes/: __init__.py  code_plan.py  code_qa.py  codegen.py  fail.py  fix.py  knowledge.py  plan.py  render.py  verify.py
ai_workflow_lab/runtime/: context.py  files.py  usage.py
ai_workflow_lab/services/: code_extractor.py  knowledge_loader.py  llm.py  rendering.py
ai_workflow_lab/template_lab/: README.md  play.py
app/: main.py
backend/: .env.example  .env.local  .env.vps.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: dev.sh  (+11 more)
(+389 files in other folders)
