[project]
name = "manimgenerator"
version = "0.1.0"
description = "Backend system for generating short instructional math videos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
