[project]
name = "manimgenerator"
version = "0.1.0"
description = "Backend system for generating short instructional math videos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "fastapi>=0.110",
    "gunicorn>=24.1.1",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "minio>=7.2.10",
    "numpy>=1.26",
    "pgvector>=0.4",
    "psycopg2>=2.9.11",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "redis>=7.1.0",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
