[project]
name = "ai-workflow-lab"
version = "0.1.0"
description = "Standalone LangGraph lab for iterating on Manim video generation workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3",
    "langchain-openrouter>=0.1.0",
    "langgraph>=1.1.6",
    "openrouter>=0.9.1",
    "pydantic>=2.5",
]
